--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,10 @@
 services:
   - type: web
     name: examhub-backend
-    env: python
+    env: docker
     region: oregon
     plan: free
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
       - key: GEMINI_API_KEY
         sync: false
-      - key: PORT
-        value: 10000
