--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,14 @@ services:
   - type: web
     name: examhub-backend
     env: docker
-    region: oregon  # or singapore, frankfurt, etc.
+    region: oregon
     plan: free
     dockerfilePath: ./Dockerfile
     dockerContext: .
     envVars:
       - key: GEMINI_API_KEY
+        sync: false
+      - key: FIREBASE_CREDENTIALS
         sync: false
       - key: PORT
         value: 10000
